[package]
name = "bevy-test"
version = "0.1.0"
authors = ["Rob Parrett <robparrett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "b6485ccf29e23f24c972d2f9a57c0c2da1f1a1df" }
#bevy = { path = "../bevy-fork" }
