[package]
name = "bevy-test"
version = "0.1.0"
authors = ["Rob Parrett <robparrett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { path = "../bevy-fork" }
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "bc4fe9b186db3f32eef38fc4241289df480fa949" } # crashy
#bevy = { git = "https://github.com/rparrett/bevy.git", rev = "1a8318b3ea127e77c79efbe18b5fbb7d2b36fd91" } # no crashy
#bevy = { git = "https://github.com/rmsc/bevy.git", rev = "c25ee55cf8e50d2b78f668afe2174a0dfeee6334" } # crashy
#bevy = { git = "https://github.com/rmsc/bevy.git", rev = "4623bd3275c2161d4fa0a144c627532e65dc36f8" } # crashy
