[package]
name = "bevy-test"
version = "0.1.0"
authors = ["Rob Parrett <robparrett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/geckoblu-forks/bevy", branch = "collide_aabb_dev" }
#bevy = { path = "../bevy-fork/" }
